--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ logged_out_greeting="Hi! How can we help you?">
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-pillows">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/pillow1.jpg" class="img-fluid" alt="">
+              <img src="assets\img\portfolio\pillow1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>#1</h4>
                 <p key="petPillows" class="lang">Poduszki dla zwierząt</p>
