access-controll fixed

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
   <!-- Vendor Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
-  <link href="assets/vendor/fontawesome-free-5.15.3-web/css/all.css" rel="stylesheet"> <!--load all styles -->
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
   <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
@@ -72,10 +71,10 @@ logged_out_greeting="Hi! How can we help you?">
   <!-- ======= Top Bar ======= -->
   <section id="topbar" class="d-none d-lg-flex align-items-center fixed-top topbar-transparent">
     <div class="container text-right">
-      <i class="fas fa-phone"></i>
+      <i class="icofont-phone"></i> 
       <span key="contactNumber" class="lang">+48 783 966 632</span>
 
-      <i class="fas fa-clock"></i>
+      <i class="icofont-clock-time icofont-rotate-180"></i>
       <span key="openingTime" class="lang" >Pn - Pt: 9:00 - 17:00</span>
             </div>
   </section>
